feat: add EEI taxonomy object-scope API
